--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react_portfolio": "file:",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-type-animation": "^3.2.0"
